Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
Description
Thanks to MDEV-12699, the doublewrite buffer will only be needed in those cases when a page is being updated in the data file. If the page had never been written to the data file since it was initialized, then recovery will be able to reconstruct the page based solely on the contents of the redo log files.
The doublewrite buffer is only really needed when recovery needs to read the page in order to apply redo log.
Avoiding unnecessary use of the doublewrite buffer should improve the write performance of InnoDB.
Attachments
Issue Links
- is blocked by
-
MDEV-12699 Improve crash recovery of corrupted data pages
-
- Closed
-
- relates to
-
MDEV-19739 Avoid unnecessary page reads on recovery with innodb_log_optimize_ddl=ON
-
- Closed
-
-
MDEV-19747 Deprecate and ignore innodb_log_optimize_ddl
-
- Closed
-
-
MDEV-31816 buf_LRU_free_page() does not preserve ROW_FORMAT=COMPRESSED block state
-
- Closed
-
-
MDEV-11125 Introduce a reduced doublewrite mode, handling error detection only
-
- Closed
-
-
MDEV-22369 Assertion `err == DB_SUCCESS' failed. in btr_block_get_func during crash recovery
-
- Closed
-