storage/innobase/buf/buf0buf.cc
@@ -1523,6 +1523,7 @@ buf_block_init(
 	block->page.io_fix = BUF_IO_NONE;
 	block->page.flush_observer = NULL;
 	block->page.encrypted = false;
+	block->page.init_on_flush = false;
 	block->page.real_size = 0;
 	block->page.write_size = 0;
 	block->modify_clock = 0;
@@ -5471,6 +5472,7 @@ buf_page_init_for_read(
 		bpage->state = BUF_BLOCK_ZIP_PAGE;
 		bpage->id = page_id;
 		bpage->flush_observer = NULL;
+		bpage->init_on_flush = false;
 
 		ut_d(bpage->in_page_hash = FALSE);
 		ut_d(bpage->in_zip_hash = FALSE);
